[gd_scene load_steps=3 format=3 uid="uid://s3ym36f1vo6o"]

[ext_resource type="Script" path="res://scenes/credits.gd" id="1_1c152"]
[ext_resource type="PackedScene" uid="uid://dv2y18ye8j7o0" path="res://scenes/main_menu_scene.tscn" id="2_ly07l"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1c152")
main_menu_scene = ExtResource("2_ly07l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Credits:
Design/Dec: Game Dev With Michael
[url]https://www.youtube.com/@MichaelGame_Dev[/url]
Art: [url]https://limezu.itch.io/[/url]
Music: Dan Burns -  [url]https://Danburns.spaces [/url]

Voices:
BigEasy03
Brandon - [url]https://www.youtube.com/@sasquatchbgames[/url]
Game Dev with Michael
"

[node name="MainMenuButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Main Menu"

[connection signal="meta_clicked" from="MarginContainer/PanelContainer/VBoxContainer/RichTextLabel" to="." method="_on_rich_text_label_meta_clicked"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
